<resources>
    <string name="app_name">Song Quiz</string>
    <string name="_00_00">0:00</string>
    <string name="play">Play</string>
    <string name="_0_0">0/0</string>
    <string name="_0">0</string>
    <string name="problem_loading">Ha ocurrido un problema cargando las canciones.</string>
    <string name="game_over">Game Over!</string>
    <string name="saved_high_score_key">com.es.usj.song_quiz.score_key</string>
    <string name="new_high_score">You got a new High Score!</string>
    <string name="previous_highest_score">Your highest score is: %d</string>
    <string name="current_score">Your score is: %d</string>
    <string name="speaker">speaker</string>
    <string name="libranner_santos">Libranner Santos</string>
    <string name="clary_morla">Clary Morla</string>
    <string name="logo">logo</string>
    <string name="logo_usj">logo USJ</string>
    <string name="developers">Developers</string>
    <string name="app_description">Juego para adivinar quien canta la canción</string>
    <string name="back">Back</string>
</resources>
